<?xml version="1.0" encoding="utf-8"?>
<!-- Book Listview Layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_main_margin"
            android:layout_marginRight="@dimen/activity_main_margin"
            android:text="@string/default_title"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/status_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/author_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/default_author"
            android:textColor="@color/textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/title_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/default_status"
            android:textColor="@color/textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_text" />

        <TextView
            android:id="@+id/isbn_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="123-4-5678965-4-1"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/title_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/author_text" />

        <TextView
            android:id="@+id/owner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            android:text="@string/default_owner"
            android:textColor="@color/textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/isbn_text"
            app:layout_constraintTop_toBottomOf="@+id/isbn_text" />

        <TextView
            android:id="@+id/borrower_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            android:text="@string/default_current_borrower"
            android:textColor="@color/textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/status_text"
            app:layout_constraintTop_toBottomOf="@+id/isbn_text" />

</androidx.constraintlayout.widget.ConstraintLayout>