<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/display_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/default_username"
        android:textColor="@color/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirm_button" />

    <ImageButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:drawable/list_selector_background"
        android:contentDescription="@string/confirm_description"
        app:layout_constraintEnd_toStartOf="@+id/reject_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/confirm_icon_48" />

    <ImageButton
        android:id="@+id/reject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:drawable/list_selector_background"
        android:contentDescription="@string/reject_description"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirm_button"
        app:srcCompat="@drawable/reject_icon_48" />
</androidx.constraintlayout.widget.ConstraintLayout>