<?xml version="1.0" encoding="utf-8"?>
<!-- Book lists and main nav menu -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/empty_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_48" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/filterTabs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/empty_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/confirm"
        app:tabIndicatorHeight="@dimen/activity_main_margin"
        app:tabTextColor="@color/textColorInverse">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_all_books" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_my_books" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_borrowed" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_requested" />
    </com.google.android.material.tabs.TabLayout>

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_main_margin"
        android:layout_marginLeft="@dimen/activity_main_margin"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:ems="10"
        android:hint="@string/mainActivity_search"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintEnd_toStartOf="@+id/sort"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTabs" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_margin"
        android:layout_marginRight="@dimen/activity_main_margin"
        android:text="@string/mainActivity_search"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_bar" />

    <ImageButton
        android:id="@+id/sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mainActivity_filter"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toStartOf="@+id/search_btn"
        app:layout_constraintTop_toTopOf="@+id/search_bar"
        app:srcCompat="@drawable/ic_baseline_sort_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:contentDescription="@string/mainActivity_edit_profile"
            android:focusable="true"
            app:backgroundTint="#4527A0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/floating_add"
            app:layout_constraintHorizontal_bias="0.744"
            app:layout_constraintStart_toEndOf="@+id/floating_filter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_person_48" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:contentDescription="@string/mainActivity_add"
            android:focusable="true"
            app:backgroundTint="@color/confirm"
            app:layout_constraintBottom_toBottomOf="@+id/floating_edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/floating_edit_profile"
            app:srcCompat="@drawable/ic_baseline_add_48" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:contentDescription="@string/mainActivity_filter"
            android:focusable="true"
            app:backgroundTint="@color/mid_way"
            app:layout_constraintBottom_toBottomOf="@+id/floating_edit_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/floating_edit_profile"
            app:srcCompat="@drawable/ic_baseline_filter_list_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_view_inbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/floating_filter"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/sym_action_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/book_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>